--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 
       <img id="bio-image" src="http://4.bp.blogspot.com/-cT9bfj5o3kw/VKa3UGTjC_I/AAAAAAAAA_4/Jk9Sb-8NnaA/s1600/cat%2Bwith%2Bglasses%2Bprofile%2Bpic.jpg" alt="Ouyang">
     <!-- <div id="text-content"> -->
-      <p>Write a short paragraph or two about yourself, or use placeholder text. </p>
       <p>Nulla tempor ornare diam, vitae volutpat erat bibendum eget. Nunc sagittis placerat velit sit amet interdum. Nam in iaculis purus, quis tristique velit. Cras ut nisl vitae orci malesuada placerat non sed magna. Nulla ultrices, dolor at aliquam volutpat,
         lorem magna pharetra arcu, eget feugiat nisi libero at nunc. Phasellus finibus elit at sapien vehicula varius. Maecenas in dapibus leo. Aliquam molestie vulputate metus. Morbi sed posuere quam, et sodales felis. Proin augue nulla, pellentesque
         at venenatis vel, sagittis eget nibh. Maecenas libero velit, luctus eu velit vitae, eleifend convallis felis.</p>
@@ -49,15 +48,15 @@
 
       <hr>
           <a href="https://github.com/ouyangtt"> 
-       <img id="github" src="/Users/ouyangtt/Desktop/ouyangtt.github.io/assets/images/github_square_black-128.png" alt="github">
+       <img id="github" src="assets/images/github_square_black-128.png" alt="github">
           </a>
 
           <a href="https://www.linkedin.com/in/tung-tung-ouyang-03764093/"> 
-       <img id="linkedln" src="/Users/ouyangtt/Desktop/ouyangtt.github.io/assets/images/linkedin_square_color-128.png" alt="linkedin">
+       <img id="linkedln" src="assets/images/linkedin_square_color-128.png" alt="linkedin">
           </a>
 
           <a href="https://stackoverflow.com/users/9129451/tung-tung-ouyang"> 
-       <img id="stack" src="/Users/ouyangtt/Desktop/ouyangtt.github.io/assets/images/stackoverflow.png" alt="Stack">
+       <img id="stack" src="assets/images/stackoverflow.png" alt="stack">
           </a>
 
     </div>
