without button functionality

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <header class="header" >
     <div class="name">Tung Tung Ouyang</div>
     <div class="header-tab"></div>
+
+<button class="btn About">About</button>
+<button class="btn Portfolio">Portfolio</button>
+<button class="btn Contact">Contact</button>
   </header>
 
 
