--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <!-- Linking CSS -->
-  <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style3.css">
 
   <title> My Bio page </title>
 </head>
@@ -23,26 +23,17 @@
 
   <div class="entire">
 
-    <div class="contact">
-      <h2>Contact</h2>
+    <div class="port">
+      <h2>Portfolio</h2>
 
       <br><hr> 
-
-      <div class="container">
-  <form action="/action_page.php">
-    <label for="fname">Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-    <label for="lname">Email</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your email..">
-
-
-    <label for="subject">Message</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-    <input type="submit" value="Submit">
-  </form>
-</div>
+     <img id="image1" src="assets/images/1.png" >
+     <img id="image2" src="assets/images/2.png" >
+     <img id="image3" src="assets/images/3.png" >
+     <img id="image4" src="assets/images/4.png" >
+     <img id="image5" src="assets/images/5.png" >
+     <img id="image6" src="assets/images/6.png" >
+   
 
     </div>
 
