--- a/index.html
+++ b/index.html
@@ -2,74 +2,66 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="UTF-8">
-  <!-- Linking CSS -->
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
-  <title> My Bio page </title>
+      <meta charset="UTF-8">
+   <!-- Linking CSS -->
+      <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <title> My Bio page </title>
 </head>
 
 <body>
-  <header class="header" >
+
+  <!-- A fixed header contains name and page tags -->
+    <header class="header" >
     <div class="name">Tung Tung Ouyang</div>
     <div class="header-tab"></div>
+     <div class="tabs">
+       <ul>  
+         <li><a href="index.html" style="text-decoration:none">About |</a></li>
+         <li><a href="portfolio.html" style="text-decoration:none"> Portfolio |</a></li>
+         <li><a href="contact.html" style="text-decoration:none"> Contact</a></li>
+       </ul>
+     </div>
+    </header>
 
-<button class="btn About">About</button>
-<button class="btn Portfolio">Portfolio</button>
-<button class="btn Contact">Contact</button>
-  </header>
+    <!-- A section that contains entire contents -->
+    <div class="entire">
 
-
-
-
-  <div class="entire">
-
-    <div class="section about-me">
-    <!-- <figure class="box box-1">Box 1</figure> -->
+      <div class="section about-me">
       <h2>About Me</h2>
+      <hr> 
 
-      <br><hr> 
+        <img id="bio-image" src="http://4.bp.blogspot.com/-cT9bfj5o3kw/VKa3UGTjC_I/AAAAAAAAA_4/Jk9Sb-8NnaA/s1600/cat%2Bwith%2Bglasses%2Bprofile%2Bpic.jpg" alt="Ouyang">
 
-      <img id="bio-image" src="http://4.bp.blogspot.com/-cT9bfj5o3kw/VKa3UGTjC_I/AAAAAAAAA_4/Jk9Sb-8NnaA/s1600/cat%2Bwith%2Bglasses%2Bprofile%2Bpic.jpg" alt="Ouyang">
-    <!-- <div id="text-content"> -->
-      <p>Nulla tempor ornare diam, vitae volutpat erat bibendum eget. Nunc sagittis placerat velit sit amet interdum. Nam in iaculis purus, quis tristique velit. Cras ut nisl vitae orci malesuada placerat non sed magna. Nulla ultrices, dolor at aliquam volutpat,
+        <p>Nulla tempor ornare diam, vitae volutpat erat bibendum eget. Nunc sagittis placerat velit sit amet interdum. Nam in iaculis purus, quis tristique velit. Cras ut nisl vitae orci malesuada placerat non sed magna. Nulla ultrices, dolor at aliquam volutpat,
         lorem magna pharetra arcu, eget feugiat nisi libero at nunc. Phasellus finibus elit at sapien vehicula varius. Maecenas in dapibus leo. Aliquam molestie vulputate metus. Morbi sed posuere quam, et sodales felis. Proin augue nulla, pellentesque
         at venenatis vel, sagittis eget nibh. Maecenas libero velit, luctus eu velit vitae, eleifend convallis felis.</p>
 
-      <p>Nullam imperdiet vehicula dolor eu consectetur. Vestibulum pulvinar lobortis accumsan. Phasellus lobortis pulvinar augue, eu ultrices dui. Donec ut est erat. In facilisis tellus nibh, eu consequat diam commodo a. Nam egestas sapien nunc, ullamcorper
+        <p>Nullam imperdiet vehicula dolor eu consectetur. Vestibulum pulvinar lobortis accumsan. Phasellus lobortis pulvinar augue, eu ultrices dui. Donec ut est erat. In facilisis tellus nibh, eu consequat diam commodo a. Nam egestas sapien nunc, ullamcorper
         semper odio feugiat non. Duis et nisl leo. Aliquam consectetur vestibulum turpis. Vivamus non elit ut lorem mattis iaculis. Suspendisse ullamcorper ante orci, et condimentum nisi pharetra id. Praesent ut erat in eros mollis interdum quis ut nisi.
         Etiam ac risus in erat imperdiet sagittis eu sed metus. Etiam molestie ipsum sed vehicula efficitur. Cras eu metus in ex vehicula sodales.</p>
-          <p>Maecenas feugiat, ex quis hendrerit interdum, felis ante laoreet sem, vitae tincidunt diam lectus fringilla dolor. Nunc vitae dui sed ligula pharetra sagittis in nec ante. Sed consequat congue vehicula. Donec vel risus at sapien rhoncus consequat
+        <p>Maecenas feugiat, ex quis hendrerit interdum, felis ante laoreet sem, vitae tincidunt diam lectus fringilla dolor. Nunc vitae dui sed ligula pharetra sagittis in nec ante. Sed consequat congue vehicula. Donec vel risus at sapien rhoncus consequat
         a lobortis lorem. Mauris ut sem massa. Curabitur ac consequat eros. Nulla non nibh eros. Donec porta condimentum nisi a iaculis. Sed sit amet risus at lacus suscipit accumsan sed ullamcorper lorem. Proin sed egestas risus. Sed egestas ex ac finibus
         ornare.</p>
-    <!-- </div> -->
+      </div>
 
-    </div>
-
-    <div class="section connect-with-me">
-    <!-- <section id="Connect-with-me"> -->
+      <div class="section connect-with-me">
       <h3>Connect with Me</h3>
-
       <hr>
-          <a href="https://github.com/ouyangtt"> 
-       <img id="github" src="assets/images/github_square_black-128.png" alt="github">
-          </a>
 
-          <a href="https://www.linkedin.com/in/tung-tung-ouyang-03764093/"> 
-       <img id="linkedln" src="assets/images/linkedin_square_color-128.png" alt="linkedin">
-          </a>
+        <a href="https://github.com/ouyangtt" target="_blank" style="text-decoration:none"> 
+         <img id="github" src="assets/images/git.png" alt="github">
+        </a>
 
-          <a href="https://stackoverflow.com/users/9129451/tung-tung-ouyang"> 
-       <img id="stack" src="assets/images/stackoverflow.png" alt="stack">
-          </a>
+        <a href="https://www.linkedin.com/in/tung-tung-ouyang-03764093/" target="_blank" style="text-decoration:none"> 
+         <img id="linkedln" src="assets/images/link.png" alt="linkedin">
+        </a>
 
+        <a href="https://stackoverflow.com/users/9129451/tung-tung-ouyang" target="_blank" style="text-decoration:none"> 
+         <img id="stack" src="assets/images/stack.png" alt="stack">
+        </a>
+
+      </div>
     </div>
-
-
-  </div>
-
-
 </body>
-
 </html>
 
