--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
@@ -141,57 +144,136 @@
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+        <div class="my-auto">
+          <h2 class="mb-5">Projects</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Web Application Development Projects</h3>
+              <ul>
+                <li>Consumed Google or other APIs to parse JSON and use AJAX to update data on website</li>
+                <li>Queried real-time data from MySQL, Firebase or Mongo Databases by using jQuery and Node.js and authenticated users by Google Oauth and Passport.js</li>
+                <li>Structured the front-end by Express, Sequelize or React and styled the UI by CSS or some libraries like Bootstrap and Semantic</li>
+              </ul>
+              <p>Tools Used: HTML, CSS, JavaScript, jQuery, Python, Express.js, React.js, Node.js, Passport.js, SQL, MongoDB, Firebase, Bootstrap, Semantic, Git, Github, Heroku</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Spring 2018</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Data Structures Projects</h3>
+              <ul>
+                <li>Simulated and drew the motion of N objects in a plane, accounting for the gravitational forces mutually affecting each object as demonstrated by Sir Issac Newton's Law of Universal Gravitation</li>
+                <li>Built implementations of a "Double Ended Queue" using both lists and arrays and wrote tests for those data structures</li>
+                <li>Built text editor with standard functions and updated data structure</li>
+              </ul>
+              <p>Tools Used: Java, Git and IntelliJ</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Spring 2016</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Data Analysis Using R/R Studio</h3>
+              <ul>
+                <li>Researched and cleaned raw data of NBA teams and players</li>
+                <li>Analyzed players’ data based on position, weight and height and graphed models like box plots</li>
+              </ul>
+              <p>Tools Used: R studio, MS Office, Adobe Acrobat</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Fall 2015</span>
+            </div>
+          </div>     
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Mathematical Methods of Optimization Projects</h3>
+              <ul>
+                <li>Wrote several Matlab scripts and functions to solve a broad range of LP problems</li>
+                <li>Solved George Stigler’s Diet and 1-norm regression problem</li>
+              </ul>
+              <p>Tools Used: Matlab, MS Office</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Fall 2015</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Operations Research Project</h3>
+              <ul>
+                <li>Built linear models to maximize total profits according to resources and limitations for a project portfolio</li>
+              </ul>
+              <p>Tools Used: AMPL (Liner programing software), MS Office, Adobe Acrobat</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Spring 2015</span>
+            </div>
+          </div>         
+
+        </div>
+
+      </section>
+
+     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <h3 class="mb-0">IRS Volunteer Income Tax Assistance (VITA) Program</h3>
+              <div class="subheading mb-3">Volunteer Tax Preparer and Quality Reviewer</div>
+              <ul>
+                <li>Interviewed and prepared tax return for low-to-moderate income families</li>
+                <li>Reviewed tax returns completed by other volunteer tax preparers</li>
+              </ul>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">February 2017 – April 2017</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <h3 class="mb-0">Chi Pi Alpha Accounting Club of GGU</h3>
+              <div class="subheading mb-3">President</div>
+              <ul>
+                <li>Communicated regularly with other student organizations, administrative officers, faculty and community members</li>
+                <li>Organized campus events with career service center and endeavor to get discounts for students from Becker CPA and Roger CPA</li>
+                <li>Worked with CalCPA campus ambassador and director of SFIMA corporate outreach to enhance professional networking between organizations and students</li>
+              </ul>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">October 2016 – October 2017</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <h3 class="mb-0">Net Impact GGU Graduate Chapter</h3>
+              <div class="subheading mb-3">VP and Finance</div>
+              <ul>
+                <li>Assisted in developing an annual plan and details to set up a new chapter at GGU</li>
+                <li>Communicated effectively with administrative officers to get recognition</li>
+              </ul>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
+              <span class="text-primary">April 2017 – October 2017</span>
             </div>
           </div>
 
         </div>
-
       </section>
+
+
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
@@ -206,22 +288,13 @@
               <i class="devicons devicons-python"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-react"></i>
-            </li>
+              <i class="devicons devicons-javascript"></i>
+            </li>            
             <li class="list-inline-item">
               <i class="devicons devicons-html5"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-css3"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-mysql"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-mongodb"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-nodejs"></i>
@@ -230,10 +303,22 @@
               <i class="devicons devicons-jquery"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-git"></i>
+              <i class="devicons devicons-mysql"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-mongodb"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-firebase"></i>
+            </li>                
+            <li class="list-inline-item">
+              <i class="devicons devicons-react"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-bootstrap"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-git"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-npm"></i>
