adding lots of things

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
@@ -74,7 +74,7 @@
           <div class="subheading mb-5">Berkeley, CA 94704 · (415) 361-1464 ·
             <a href="mailto:tungtung.ouyang@gmail.com">tungtung.ouyang@gmail.com</a>
           </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="mb-5">It is so hard to write a summary about myself. I'm gonna procrastinate more...</p>
           <ul class="list-inline list-social-icons mb-0">
              <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/tung-tung-ouyang-03764093" target="_blank">
@@ -329,65 +329,42 @@
 
           </ul>
 
-          <div class="subheading mb-3">Workflow</div>
+          <div class="subheading mb-3">Others</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              Proficient with MS Word, Excel (e.g. VLOOKUP and PivotTables) &amp; PowerPoint</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              Tutor experience in Math, Physics &amp; Piano</li>
           </ul>
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="portfolio">
         <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
-          </ul>
+          <h2 class="mb-5">Portfolio</h2>
+      Comming soon...Play my hand-drawn <a href="https://ouyangtt.github.io/Hangman-Game" target="_blank">Hangman</a> game for now...
+
         </div>
       </section>
 
      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <p>I enjoy baking cakes and pastries. It's also a good meditation for me to release from stress. I can even make some challenging desserts like macarons! Maybe I will open a bakery after retirement.</p>
+          <p class="mb-0">I love outdoor activities too. I took part in Berkeley marathons twice. I will join the bay-to-breaker 2018. I do this because I need to burn those suger from my desserts. lol</p>
+          <br>
+           <img src="img/mango.png" style="width:150px;height:150px;margin-right:20px;">
+           <img src="img/mac.png" style="width:150px;height:150px;margin-right:20px;">
+           <img src="img/tea.png" style="width:150px;height:150px;margin-right:20px;">
+           <img src="img/cherry.png" style="width:150px;height:150px;margin-right:20px;">
+
         </div>
+
+
+
+
       </section>
 
     </div>
