add margin buttom

--- a/index.html
+++ b/index.html
@@ -355,15 +355,12 @@
           <p>I enjoy baking cakes and pastries. It's also a good meditation for me to release from stress. I can even make some challenging desserts like macarons! Maybe I will open a bakery after retirement.</p>
           <p class="mb-0">I love outdoor activities too. I took part in Berkeley marathons twice. I will join the bay-to-breaker 2018. I do this because I need to burn those suger from my desserts. lol</p>
           <br>
-           <img src="img/mango.png" style="width:150px;height:150px;margin-right:20px;">
-           <img src="img/mac.png" style="width:150px;height:150px;margin-right:20px;">
-           <img src="img/tea.png" style="width:150px;height:150px;margin-right:20px;">
-           <img src="img/cherry.png" style="width:150px;height:150px;margin-right:20px;">
+           <img src="img/mango.png" style="width:150px;height:150px;margin-right:20px;margin-bottom:20px;">
+           <img src="img/mac.png" style="width:150px;height:150px;margin-right:20px;margin-bottom:20px;">
+           <img src="img/tea.png" style="width:150px;height:150px;margin-right:20px;margin-bottom:20px;">
+           <img src="img/cherry.png" style="width:150px;height:150px;margin-right:20px;margin-bottom:20px;">
 
         </div>
-
-
-
 
       </section>
 
