--- a/index.html
+++ b/index.html
@@ -74,7 +74,15 @@
           <div class="subheading mb-5">Berkeley, CA 94704 · (415) 361-1464 ·
             <a href="mailto:tungtung.ouyang@gmail.com">tungtung.ouyang@gmail.com</a>
           </div>
-          <p class="mb-5">It is so hard to write a summary about myself. I'm gonna procrastinate more...</p>
+          <p class="mb-5">I graduated from The University of California, Berkeley in May 2016, with a Bachelor of Science degree in Engineering Mathematics and Statistics. Right after graduation, I began a Master Degree program in Accountancy at Golden Gate University, where I gained in-depth learning in Accounting and Taxation and some real-world skills. I'm activately looking for an analyst role.
+          </p>
+          <p>
+          My undergraduate degree offers me solid background to apply analytical skills. I took courses for pure mathematics, applied mathematics, statistics, the physical sciences, and industrial engineering. It prepared me for a career in specific sectors of industry or business. Throughout my Master career, I studied financial/managerial accounting principle, auditing, internal controls, accounting information system, taxation and business law. I gained an understanding of the business, legal, professional and ethical context for a career at any kind. I also immersed in community outreach – served as the president of Chi Pi Alpha (GGU Accounting Club). 
+          </p>
+          <p>
+          I always love to learn new things. I’ve recently accomplished a 12-month coding Bootcamp and gained some basic knowledges of full stack development. I found it really interesting to build out a web application, to turn an idea to real. I’m currently taking an online course – “Python for Financial Analysis and Algorithmic Trading”. I love the process of discovering new things and gradually be more comfortable with them. 
+          </p>
+
           <ul class="list-inline list-social-icons mb-0">
              <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/tung-tung-ouyang-03764093" target="_blank">
