--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
           <div class="subheading mb-5">Berkeley, CA 94704 · (415) 361-1464 ·
             <a href="mailto:tungtung.ouyang@gmail.com">tungtung.ouyang@gmail.com</a>
           </div>
-          <p>I graduated from The University of California, Berkeley in May 2016, with a Bachelor of Science degree in Engineering Mathematics and Statistics. Right after graduation, I began a Master Degree program in Accountancy at Golden Gate University, where I gained in-depth learning in Accounting and Taxation and some real-world skills. I'm actively looking for an analyst role.
+          <p>I graduated from the University of California, Berkeley in May 2016, with a Bachelor of Science degree in Engineering Mathematics and Statistics, and continued a Master Degree program in Accountancy at Golden Gate University. 
           </p>
           <p>
-          My undergraduate degree offers me the solid background to apply analytical skills. I took courses in pure mathematics, applied mathematics, statistics, the physical sciences, and industrial engineering. It prepared me for a career in specific sectors of industry or business. Throughout my Master career, I studied financial/managerial accounting principle, auditing, internal controls, accounting information system, taxation and business law. I gained an understanding of the business, legal, professional and ethical context for a career of any kind. I also immersed in community outreach – served as the president of Chi Pi Alpha (GGU Accounting Club).
+          My undergraduate degree offers me the solid background to apply analytical skills. I took courses in pure mathematics, applied mathematics, statistics, the physical sciences, and industrial engineering. Throughout my Master career, I gained an understanding of the business, legal, professional and ethical context. I also immersed in community outreach – served as the president of Chi Pi Alpha (GGU Accounting Club).
           </p>
           <p>
-          I always love to learn new things. I’ve recently accomplished a 12-month coding Bootcamp and gained some basic knowledge of full stack development. I found it really interesting to build out a web application, to turn an idea into reality. I’m currently taking an online course – “Python for Financial Analysis and Algorithmic Trading”. I love the process of discovering new things and gradually be more comfortable with them.
+          I always love to learn new things. I’ve recently accomplished a 12-month coding Bootcamp and learned full stack development. I found it really interesting to build out a web application, to turn an idea into reality. I love the process of discovering new things and gradually be more comfortable with them. I am passionate about data analysis, solving complex and interesting real world tasks, making informed decisions by digging into data.
           </p>
 
           <ul class="list-inline list-social-icons mb-0">
